2010-12-06 Thunor <thunorsif_at_hotmail.com>
* Added a function to preload the ROMs which will enable the emulator
  to switch between them at runtime without repeatedly loading them.
* Modified vkeyb_init to load both keyboard images on initialisation.

2010-12-05 Thunor <thunorsif_at_hotmail.com>
* Added two runtime options pages and moved the original two.
* Modified the ZX printer filename to include the date and time.

2010-12-04 Chris Young <chris_at_unsatisfactorysoftware.co.uk>
* Updated Amiga sections to reflect recent changes.
* Modified ZX printer so the output file is not opened until something
  is printed.

2010-12-02 Thunor <thunorsif_at_hotmail.com>
* Removed most of the command-line interface leaving only the video
  options. sz81 now manages the CLI which makes parseoptions redundant.
* Added support for a platform dependent local data directory which is
  currently used to locate the permanently operational ZX printer file.
* Completely reorganised main in smain.c. Since configuring sz81 via
  the CLI is now redundant, sz81 is initialised before the emulator so
  that the emulator will now initialise using rcfile data.

2010-11-25 Thunor <thunorsif_at_hotmail.com>
* Added support for assembling pipepanic and mctemplate using Pasmo.
* Added ZX80 ROM source code recreated from disassembling the binary.

2010-11-24 Thunor <thunorsif_at_hotmail.com>
* Conventionalised and tweaked the build system a little more.
* Reorganised the newly added Open81 content in preparation for the
  soon to be included Open80 content.

2010-07-15 Thunor <thunorsif_at_hotmail.com>
* Both the mctemplate and PipePanic game are complete.

2010-05-11 Thunor <thunorsif_at_hotmail.com>
* Added a ZX81 machine code template and a pipe connecting game which
  is still under development.

2010-05-06 Thunor <thunorsif_at_hotmail.com>
* Tweaked GPH GP2X Wiz support.

2010-05-04 Thunor <thunorsif_at_hotmail.com>
* Added support for the GPH GP2X Wiz.
