@@ -31,7 +31,7 @@ char *runtime_options_text0[24] = {
 	"",
 	"Machine Type:",
 	"",
-	"  (O) ZX80  (\x2O\x2) ZX81",
+	"  (\x1 ) ZX80  (\x1 ) ZX81",
 	"",
 	"Memory\x90\x2<\x2\x85\x1  K\x90\x2>\x2\x85",
 	"",
@@ -60,17 +60,17 @@ char *runtime_options_text1[24] = {
 	"",
 	"Sound Type:",
 	"",
-	"  (\x2O\x2) None",
+	"  (\x1 ) None",
 	"",
-	"  (O) Quicksilva Sound Board",
+	"  (\x1 ) Quicksilva Sound Board",
 	"",
-	"      (\x2X\x2) ACB Stereo",
+	"      (\x1 ) ACB Stereo",
 	"",
-	"  (O) BI-PAK ZON X-81",
+	"  (\x1 ) BI-PAK ZON X-81",
 	"",
-	"      (X) ACB Stereo",
+	"      (\x1 ) ACB Stereo",
 	"",
-	"  (O) VSYNC",
+	"  (\x1 ) VSYNC",
 	"",
 	"",
 	"",
