@@ -21,6 +21,9 @@
 #include "common.h"
 #include "sound.h"
 #include "z80.h"
+#ifdef SZ81	/* Added by Thunor */
+#include "sdl.h"
+#endif
 
 
 #define parity(a) (partable[a])
@@ -385,6 +388,16 @@ while(1)
       {
       do_interrupt();	/* also zeroes it */
       }
+#ifdef SZ81	/* Added by Thunor to support a thorough emulator reset */
+    else if(interrupted==3)
+      {
+      zxpclose();		/* Close any open printer file */
+      sdl_reset();		/* Reset and reinitialise a few parts of sz81 */
+      z80_init();		/* Reinitialise variables at the top of z80.c */
+      common_init();	/* Reinitialise variables at the top of common.c */
+      return;			/* Return to smain.c and do it all again */
+      }
+#endif
     else	/* must be 2 */
       {
       /* a kludge to let us do a reset */
@@ -400,3 +413,20 @@ while(1)
     }
   }
 }
+
+#ifdef SZ81	/* Added by Thunor */
+void z80_init(void) {
+	/* Reinitialise variables at the top of z80.c */
+	tstates=0;
+	frames=0;
+	liney=0;
+	vsy=0;
+	linestart=0;
+	vsync_toggle=0;
+	vsync_lasttoggle=0;
+	ay_reg=0;
+}
+#endif
+
+
+
